@@ -2,6 +2,7 @@ software:
     picard: ~/bin/Software/Dropseq/Drop-seq_tools-1.12/3rdParty/picard/picard.jar
     star: ~/bin/Software/Mapping/STAR-2.5.3a/bin/Linux_x86_64_static/STAR
     droptools: ~/bin/Software/Dropseq/Drop-seq_tools-1.12
+    java: '/home/vfranke/.guix-profile/bin/java'
     R:
         libraries:
             dropbead
